# raetselnasen-solver

./: .gitignore  CMakeLists.txt  InputReader.cpp  InputReader.h  Puzzle.cpp  Puzzle.h  QueryManager.cpp  QueryManager.h  Readme.md  SuffixTree.cpp  SuffixTree.h  Utilities.cpp  Utilities.h  WordManager.cpp  WordManager.h  main.cpp
io/: InputReader.cpp  InputReader.h  OptionParser.cpp  OptionParser.h
puzzle24/: puzzle_config.txt  words.txt
simple_test/: puzzle_config.txt  words.txt
src/: CMakeLists.txt  QueryManager.cpp  QueryManager.h  Utilities.cpp  Utilities.h  main.cpp
src/io/: InputReader.cpp
src/word_management/: AnagramDictionary.cpp  MultiWordTreeDictionary.cpp  TreeDictionary.cpp  TreeDictionary.h
word_management/: AnagramDictionary.cpp  AnagramDictionary.h  Dictionary.h  MultiWordTreeDictionary.cpp  MultiWordTreeDictionary.h
